# PyCrysFML

./: .gitignore  LICENSE  README.md  RELEASE.md  __init__.py  build.py  build.toml  create_scripts.py  pybuild.py  pybuild.toml  pyproject.toml  requirements.txt  scripts.py  scripts.toml  scripts2.py  scripts_config.toml
.benchmarks/Darwin-CPython-3.11-64bit/: 0001_22491277c7bc5e6fcb381de32af60a265c4785a8_20240422_122759.json  0001_fa1280e547a1c00251b380c153ac04716b3e8b73_20240422_140725.json  0002_444490002f529854c104a4e8f84d5334dd78aa68_20240422_141636.json  0002_d80205efc948683fc2e50024635a83fa331394c2_20240422_132842.json  0003_b1d39e982b506b0467e29f075d8ef9bd0ed10383_20240422_134429.json
.benchmarks/Linux-CPython-3.11-64bit/: 0001_eba09518abf668e59b108f8b8030b9416b1a479b_20240422_120954.json  0001_fa1280e547a1c00251b380c153ac04716b3e8b73_20240422_140627.json  0001_fa1280e547a1c00251b380c153ac04716b3e8b73_20240422_140944.json  0001_fa1280e547a1c00251b380c153ac04716b3e8b73_20240422_140946.json  0002_444490002f529854c104a4e8f84d5334dd78aa68_20240422_141534.json  0002_444490002f529854c104a4e8f84d5334dd78aa68_20240422_141901.json  0002_444490002f529854c104a4e8f84d5334dd78aa68_20240422_141923.json  0002_93dca6d4652ed5be3bb78d841ccc0f94afbb4508_20240422_122025.json  0003_d80205efc948683fc2e50024635a83fa331394c2_20240422_132831.json  0003_d80205efc948683fc2e50024635a83fa331394c2_20240422_133145.json  0003_d80205efc948683fc2e50024635a83fa331394c2_20240422_133208.json  0004_b1d39e982b506b0467e29f075d8ef9bd0ed10383_20240422_134351.json  0004_b1d39e982b506b0467e29f075d8ef9bd0ed10383_20240422_134651.json  0004_b1d39e982b506b0467e29f075d8ef9bd0ed10383_20240422_134715.json
.benchmarks/Windows-CPython-3.11-64bit/: 0001_b1d39e982b506b0467e29f075d8ef9bd0ed10383_20240422_134438.json  0001_b1d39e982b506b0467e29f075d8ef9bd0ed10383_20240422_134759.json  0001_fa1280e547a1c00251b380c153ac04716b3e8b73_20240422_140706.json  0001_fa1280e547a1c00251b380c153ac04716b3e8b73_20240422_141048.json  0002_444490002f529854c104a4e8f84d5334dd78aa68_20240422_141613.json  0002_444490002f529854c104a4e8f84d5334dd78aa68_20240422_141945.json
.benchmarks/gfortran/Darwin-CPython-3.11-64bit/: 0001_1aa71aa0911512b686090080c1d19e06002c8efc_20240423_081524.json
.benchmarks/gfortran/Linux-CPython-3.11-64bit/: 0001_1aa71aa0911512b686090080c1d19e06002c8efc_20240423_081433.json
.benchmarks/gfortran/Windows-CPython-3.11-64bit/: 0001_1aa71aa0911512b686090080c1d19e06002c8efc_20240423_081441.json
.benchmarks/ifort/Linux-CPython-3.11-64bit/: 0001_1aa71aa0911512b686090080c1d19e06002c8efc_20240423_081741.json
.benchmarks/ifort/Windows-CPython-3.11-64bit/: 0001_1aa71aa0911512b686090080c1d19e06002c8efc_20240423_082411.json
.github/workflows/: debug.yml  main.yml  release.yml
examples/.ipynb_checkpoints/: srtio3-checkpoint.ipynb
scripts/: add_cfml_databases_to_pycfml_dist.sh  add_init_file_to_pycfml_dist.sh  add_powder_mod_to_pycfml_repo.sh  build_cfml_objs.sh  build_cfml_static_lib.sh  build_pycfml_objs.sh  build_pycfml_shared_objs_or_dynamic_libs.sh  compile_cfml_objs.sh  compile_pycfml_objs.sh  copy_cfml_databases_to_pycfml_dist.sh  copy_compiled_to_cfml_dist.sh  copy_compiled_to_pycfml_dist.sh  copy_init_file_to_pycfml_dist.sh  copy_powder_mod_to_pycfml_repo.sh  create_cfml_build_dir.sh  create_cfml_dist_dir.sh  create_cfml_repo_dir.sh  create_cfml_static_lib.sh  create_pycfml_build_dir.sh  create_pycfml_dist_dir.sh  create_pycfml_python_wheel.sh  create_pycfml_repo_dir.sh  create_pycfml_shared_objs_or_dynamic_libs.sh  delete_renamed_global_deps_file.sh  download_cfml_repo.sh  download_pycfml_repo.sh  install_pycfml_from_wheel.sh  main_script.sh  print_debug_info.sh  rename_global_deps_file.sh  rename_pycfml_python_wheel.sh  run_powder_mod_main.sh  run_powder_mod_tests.sh  run_pycfml_unit_tests.sh  show_info.sh  validate_pyproject_toml.sh
src/: __init__.py
tests/: helpers.py  test_powder_mod.py  test_py_cfml_metrics.py  test_py_cfml_profiles.py  test_py_cfml_sxtal_geom.py
tests/integration_tests/: test_powder_mod.py
tests/powder_mod_tests/: srtio3-pm3m-pattern_Nebil-ifort.xy  test_powder_mod.py
tests/unit_tests/: test_py_cfml_metrics.py  test_py_cfml_profiles.py  test_py_cfml_sxtal_geom.py
(+208 files in other folders)
