[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'pycrysfml'
version = '0.1.0'
description = 'Testing packaging for Python API to CrysFML08 from https://code.ill.fr/scientific-software/CrysFML2008'
authors = [
  {name = 'Juan Rodríguez-Carvajal', email = 'jrc@ill.fr'},
  {name = 'Nebil Ayape Katcho', email = 'katcho@ill.fr'},
  {name = 'Javier Gonzalez-Platas', email = 'jplatas@ull.edu.es'  }
]
maintainers = [
  {name = 'Elisa Rebolini', email = 'rebolini@ill.fr'},
  {name = 'Andrew Sazonov', email = 'andrew.sazonov@ess.eu'}
]
readme = 'README.md'
license = {file = 'LICENSE'}
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: LGPL License',
  'Operating System :: OS Independent'
]
requires-python = '>=3.11'
dependencies = [
  'numpy<2'
]

[project.optional-dependencies]
ci = [
  'validate-pyproject[all]',
  'build',
  'wheel'
]
test = [
  'deepdiff',
  'pytest>=5.2',
  'pytest-benchmark',
  'pygit2'
]

[project.urls]
Homepage = 'https://github.com/easyscience/TEST_PyCrysFML'

[tool.hatch.build.targets.wheel]
packages = ['pycrysfml08_dist/pycrysfml08']
artifacts = ['*.py', '*.so', '*.so.*', '*.dylib', '*.pyd', '*.dll', '*.txt']
