[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'pycrysfml'
version = '0.1.1'
description = 'Python API to CrysFML2008 from https://code.ill.fr/scientific-software/CrysFML2008'
authors = [
  {name = 'Juan Rodríguez-Carvajal', email = 'jrc@ill.fr'},
  {name = 'Nebil Ayape Katcho', email = 'katcho@ill.fr'},
  {name = 'Javier Gonzalez-Platas', email = 'jplatas@ull.edu.es'  }
]
maintainers = [
  {name = 'Elisa Rebolini', email = 'rebolini@ill.fr'},
  {name = 'Andrew Sazonov', email = 'andrew.sazonov@ess.eu'}
]
readme = 'README.md'
license = {file = 'LICENSE'}
classifiers = [
  'Development Status :: 4 - Beta',
  'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
  'Programming Language :: Python :: 3',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3'
]
requires-python = '>=3.9'
dependencies = [
  'numpy<2'
]

[project.optional-dependencies]
ci = [
  'toml',  # use this as tomllib is only available for python >=3.11
  'validate-pyproject[all]',
  'build',
  'wheel',
  'check-wheel-contents',
  'abi3audit',
  'colorama'
]
test = [
  'deepdiff',
  'pytest>=5.2',
  'pytest-benchmark',
  'pygit2'
]

[project.urls]
homepage = 'https://github.com/EasyScience/PyCrysFML'
source = 'https://github.com/EasyScience/PyCrysFML'
tracker = 'https://github.com/EasyScience/PyCrysFML/issues'

[tool.hatch.build.targets.wheel]
packages = ['dist/pyCFML/pycrysfml']  # NEED FIX: Replace based on scripts.toml - pycfml.dir.dist-package
artifacts = ['*.py', '*.so', '*.so.*', '*.dylib', '*.pyd', '*.dll', '*.txt']
